--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -3,7 +3,7 @@
     height: 100vh;
     display: flex;
     justify-content: center;
-    background-color: #6874d0;
+    background-color: #435EA8;
     align-items: center;
 }
 
@@ -17,7 +17,9 @@
 }
 
 .container_login{
-    width: 60%;
+    width: 100%;
+    max-width: 40em;
+    min-width: 30em;
     height: 80%;
     display: flex;
     flex-direction: column;
@@ -40,19 +42,25 @@
     flex-direction: column;
     width: 80%;
     height: 50%;
-    background-color: rgba(134,144,218,0.8);
+   
     align-items: center;
     justify-content: center;
     border-radius: 30px;
 }
 
 .container_login button{
-    width: 80%;
-    height: 50px;
+    width: 82%;
+    height: 40px;
     margin-top: 50px;
-    border-radius: 30px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    border-radius: 5px;
     border: none;
-    background-color: #3ae8e1;
+    background-color: #9EB0E1;
+
     cursor: pointer;
     outline: none;
 }
@@ -87,7 +95,13 @@
 .logo_login{
     height: 30%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.logo_login p{
+    font-weight: 400;
+    color: #FFF;
 }
 
